--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h2>Kotomi - 雑道具集</h2>
         <ul>
-            <li><a href="temp_beta.html">絶対温度–逆温度変換器</a></li>
+            <li><a href="temp_beta">絶対温度–逆温度変換器</a></li>
         </ul>
     </body>
 </html>
