--- a/temp_beta/index.html
+++ b/temp_beta/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css" type="text/css">
+        <link rel="stylesheet" href="../style.css" type="text/css">
         <title>絶対温度–逆温度変換器</title>
     </head>
     <body>
